trunk/Archive2/83/95333f7c49a278/output
main.cpp:3:12: error: 'int64_t' does not name a type
     static int64_t get_current_us()
            ^
main.cpp:10:12: error: 'int64_t' does not name a type
     inline int64_t get_elapsed_us() const
            ^
main.cpp:19:18: error: expected type-specifier before 'int64_t'
         operator int64_t() const
                  ^
main.cpp:32:6: error: expected '}' at end of input
     };
      ^
main.cpp: In constructor 'StartTime::StartTime()':
main.cpp:17:23: error: class 'StartTime' does not have any field named 'time_us'
         StartTime() : time_us() {}
                       ^
main.cpp: At global scope:
main.cpp:17:34: error: expected unqualified-id at end of input
         StartTime() : time_us() {}
                                  ^
